--- a/JiraGitHubPRCreator.Web/Views/Home/Index.cshtml
+++ b/JiraGitHubPRCreator.Web/Views/Home/Index.cshtml
@@ -8,54 +8,62 @@
     <h1>GitHub & JIRA PR Creator</h1>
     <p class="lead">How exciting!</p>
 </div>
-
+<div class="row">
+    <ul>
+        @foreach (var message in Model.Messages)
+        {
+            <li>@message</li>
+        }
+    </ul>
+</div>
 <div class="row">
     @using (Html.BeginForm("Submit", "Home"))
     {
-        <div class="form-group">
-            @Html.LabelFor(m => m.BranchName, "Branch Name")
-            @Html.TextBoxFor(m => m.BranchName, new { @class = "form-control" })
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(m => m.BranchName, "Branch Name")
+                @Html.DropDownListFor(m => m.BranchName, Model.Branches.Select(b => new SelectListItem { Text = b, Value = b }))
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.JiraIssueId, "JIRA Issue ID")
+                @Html.TextBoxFor(m => m.JiraIssueId, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.PullRequestTitle, "Pull Request Title")
+                @Html.TextBoxFor(m => m.PullRequestTitle, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Description, "Description")
+                @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+            </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.JiraIssueId, "JIRA Issue ID")
-            @Html.TextBoxFor(m => m.JiraIssueId, new { @class = "form-control" })
+        <div class ="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(m => m.MIv7, "MI 7.0")
+                @Html.CheckBoxFor(m => m.MIv7, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.MIv80, "MI 8.0")
+                @Html.CheckBoxFor(m => m.MIv80, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.MIv81, "MI 8.1")
+                @Html.CheckBoxFor(m => m.MIv81, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.MIvNext, "MI Next")
+                @Html.CheckBoxFor(m => m.MIvNext, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.AddLinksToJira, "Add Pull Request Links to JIRA")
+                @Html.CheckBoxFor(m => m.AddLinksToJira, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.SetJiraIssuePendingMerge, "Set JIRA issue to 'Pending Merge'")
+                @Html.CheckBoxFor(m => m.SetJiraIssuePendingMerge, new { @class = "form-control" })
+            </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.PullRequestTitle, "Pull Request Title")
-            @Html.TextBoxFor(m => m.PullRequestTitle, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Description, "Description")
-            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.MIv7, "MI 7.0")
-            @Html.CheckBoxFor(m => m.MIv7, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.MIv80, "MI 8.0")
-            @Html.CheckBoxFor(m => m.MIv80, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.MIv81, "MI 8.1")
-            @Html.CheckBoxFor(m => m.MIv81, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.MIvNext, "MI Next")
-            @Html.CheckBoxFor(m => m.MIvNext, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.AddLinksToJira, "Add Pull Request Links to JIRA")
-            @Html.CheckBoxFor(m => m.AddLinksToJira, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.SetJiraIssuePendingMerge, "Set JIRA issue to 'Pending Merge'")
-            @Html.CheckBoxFor(m => m.SetJiraIssuePendingMerge, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.PersonalAccessToken, "Personal Access Token")
-            @Html.TextBoxFor(m => m.PersonalAccessToken, new { @class = "form-control" })
-        </div>
+        
         <button type="submit" class="btn btn-default">Submit</button>
     }
 </div>
