--- a/JiraGitHubPRCreator.Web/Views/Home/Index.cshtml
+++ b/JiraGitHubPRCreator.Web/Views/Home/Index.cshtml
@@ -23,6 +23,18 @@
                 }
             });
         }
+
+        function AddTargetBranch() {
+            var newBranch = $("#targetBranchDropDown").val();
+            var newElement = $("<li>");
+            var inputElement = $("<input type='hidden' name='TargetBranches'></input>");
+            inputElement.val(newBranch);
+            newElement.text(newBranch);
+            newElement.addClass("list-group-item");
+            newElement.append(inputElement);
+            newElement.append($("<span class='glyphicon glyphicon-remove' aria-hidden='true' style='float:right;cursor:pointer' onclick='$(this).parent(\"li\").remove()'></span>"));
+            $("#targetBranchList").append(newElement);
+        }
     </script>
 }
 
@@ -62,23 +74,16 @@
                 @Html.LabelFor(m => m.Description, "Description")
                 @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
             </div>
+
+            <button type="submit" class="btn btn-default">Submit</button>
         </div>
         <div class ="col-md-6">
             <div class="form-group">
-                @Html.LabelFor(m => m.MIv7, "MI 7.0")
-                @Html.CheckBoxFor(m => m.MIv7, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.MIv80, "MI 8.0")
-                @Html.CheckBoxFor(m => m.MIv80, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.MIv81, "MI 8.1")
-                @Html.CheckBoxFor(m => m.MIv81, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.MIvNext, "MI Next")
-                @Html.CheckBoxFor(m => m.MIvNext, new { @class = "form-control" })
+                <label for="targetBranchDropDown">Target Branch:</label>
+                @Html.DropDownList("targetBranchDropDown", Model.AvailableTargetBranches.Select(b => new SelectListItem { Text = b, Value = b}))
+                <button type="button" onclick="AddTargetBranch()">Add branch</button>
+                <ul id="targetBranchList" class="list-group">           
+                </ul>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.AddLinksToJira, "Add Pull Request Links to JIRA")
@@ -89,7 +94,5 @@
                 @Html.CheckBoxFor(m => m.SetJiraIssuePendingMerge, new { @class = "form-control" })
             </div>
         </div>
-        
-        <button type="submit" class="btn btn-default">Submit</button>
     }
 </div>
